--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
 VITE_PRODUCT_API=https://course.spacedev.vn/product
-VITE_USER_API=http://localhost:8888/users
+VITE_USER_API=https://course.spacedev.vn/users
