--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 VITE_ENV=development
-VITE_PRODUCT_API=https://course.spacedev.vn/product
-VITE_USER_API=https://course.spacedev.vn/users
-VITE_AUTH_API=https://course.spacedev.vn/authentication/v2
+VITE_PRODUCT_API=http://localhost:8888/product
+VITE_USER_API=http://localhost:8888/users
+VITE_AUTH_API=http://localhost:8888/authentication/v2
