--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.1.2",
     "axios": "^1.2.1",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
