--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 VITE_ENV=development
-VITE_PRODUCT_API=http://localhost:8888/product
-VITE_USER_API=http://localhost:8888/users
-VITE_AUTH_API=http://localhost:8888/authentication/v2
-VITE_FILE_API=http://localhost:8888/file
+VITE_PRODUCT_API=https://course.spacedev.vn/product
+VITE_USER_API=https://course.spacedev.vn/users
+VITE_AUTH_API=https://course.spacedev.vn/authentication/v2
+VITE_FILE_API=https://course.spacedev.vn/file
