--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_PRODUCT_API=http://localhost:8888/product
 VITE_USER_API=http://localhost:8888/users
 VITE_AUTH_API=http://localhost:8888/authentication/v2
 VITE_FILE_API=http://localhost:8888/file
+VITE_CART_API=http://localhost:8888/cart/v2
