--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_USER_API=http://localhost:8888/users
 VITE_AUTH_API=http://localhost:8888/authentication/v2
 VITE_FILE_API=http://localhost:8888/file
 VITE_CART_API=http://localhost:8888/cart/v2
+VITE_ORDER_API=http://localhost:8888/order/v2
