--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ VITE_AUTH_API=http://localhost:8888/authentication/v2
 VITE_FILE_API=http://localhost:8888/file
 VITE_CART_API=http://localhost:8888/cart/v2
 VITE_ORDER_API=http://localhost:8888/order/v2
+VITE_REVIEW_API=http://localhost:8888/review
