--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^6.6.1",
     "redux": "^4.2.0",
     "redux-saga": "^1.2.2",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swiper": "^8.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
